src/test/ui/error-codes/E0389.stderr
error[E0389]: cannot assign to data in a `&` reference
  --> $DIR/E0389.rs:8:5
   |
LL |     fancy_ref.num = 6;
   |     ^^^^^^^^^^^^^^^^^ assignment into an immutable reference

error: aborting due to previous error

For more information about this error, try `rustc --explain E0389`.
